# raven

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md
crates/common/: Cargo.toml
crates/common/examples/: operator-test.js  operator.rs  worker.rs  workers.js
crates/common/src/: lib.rs
crates/common/src/operator/: example.js  mod.rs  operator_runtime.rs  simple-example.js
crates/common/src/operator/bindings/: mod.rs
crates/common/src/operator/bindings/identity/: group_manager.rs  mod.rs  permission_manager.rs  sudo_manager.rs  user_manager.rs
crates/common/src/runtime/: core.rs  import.rs  mod.rs
crates/common/src/runtime/bindings/: mod.rs  registry.rs  value.rs
crates/common/src/terminal/: mod.rs
crates/common/src/ui/: example.js
crates/common/src/workers/: fetch_runtime.rs  http.rs  mod.rs  runtime.rs  server.rs  workers_runtime.rs
crates/common/src/workers/bindings/: kv.rs  mod.rs  registry.rs  utils.rs
crates/monitor/: Cargo.toml
crates/server/: Cargo.toml  Leptos.toml  README_INTERACTIONS.md  USAGE.md  index.html  tailwind.config.js
crates/server/src/: api.rs  app.rs  components.rs  example_page.rs  lib.rs  main.rs  pages.rs  server_functions.rs  websocket.rs
crates/server/src/pages/: home.rs  mod.rs  placeholder.rs  servers.rs
crates/server/style/: main.css
