[package]
name = "server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
common = { path = "../common" }
leptos = { version = "0.6", features = ["ssr"] }
leptos_axum = "0.6"
leptos_router = { version = "0.6", features = ["ssr"] }
leptos_meta = { version = "0.6", features = ["ssr"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rand = "0.8"
env_logger = "0.11"

# WebSocket dependencies
axum-extra = { version = "0.9", features = ["typed-header"] }

# Client-side dependencies (for WASM)
reqwasm = { version = "0.5", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Document",
    "Element",
    "DomTokenList",
    "Storage",
    "MediaQueryList",
    "HtmlElement",
] }

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_router/hydrate", "leptos_meta/hydrate", "dep:reqwasm", "dep:gloo-timers", "dep:web-sys", "dep:wasm-bindgen"]
ssr = ["leptos/ssr", "leptos_router/ssr", "leptos_meta/ssr"]
